force-app/main/default/objects/leaseworks__Technical_Project_Check__c/leaseworks__Technical_Project_Check__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Technical Project Checklist</label>
    <nameField>
        <label>Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Project Checklist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>