force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Actual_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Finish_Date__c</fullName>
    <description>Date on which task is completed</description>
    <inlineHelpText>Date on which task is completed</inlineHelpText>
    <label>Actual Finish Date</label>
    <type>Date</type>
</CustomField>