force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <inlineHelpText>The date on which the task actually started</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>