force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsible for this checklist item</description>
    <inlineHelpText>Responsible for this checklist item</inlineHelpText>
    <label>Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Project_Contact__c.leaseworks__Technical_Project__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Technical_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Project_Contact__c</referenceTo>
    <relationshipLabel>Technical Project Checklist</relationshipLabel>
    <relationshipName>Technical_Project_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>