force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Fleet Maintenance Power Plant Project Checklist item category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lease Compliance Due Diligence</fullName>
            </value>
            <value>
                <fullName>Budget/Purchase Order Issuance</fullName>
            </value>
            <value>
                <fullName>Team Allocation</fullName>
            </value>
            <value>
                <fullName>Pre Induction Requisites</fullName>
            </value>
            <value>
                <fullName>Work Scope Review</fullName>
            </value>
            <value>
                <fullName>Induction/Table Induction</fullName>
            </value>
            <value>
                <fullName>Tech Review/Acceptance/System Update</fullName>
            </value>
            <value>
                <fullName>Invoice Review/Maintenance Claim Support</fullName>
            </value>
            <value>
                <fullName>Asset Dispatch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>