force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount of work completed in terms of %</description>
    <inlineHelpText>Amount of work completed in terms of %</inlineHelpText>
    <label>% Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>