force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Day_Prior__c.field-meta.xml
<CustomField>
    <fullName>Day_Prior__c</fullName>
    <description>All the tasks in the sheets are driven/scheduled by the lease Expiry date which is the project END DATE.</description>
    <inlineHelpText>All tasks are scheduled backwards from the lease expiry</inlineHelpText>
    <label>Day Prior</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>