force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Ferry Company</fullName>
            </value>
            <value>
                <fullName>Technical/Commercial</fullName>
            </value>
            <value>
                <fullName>Technical/Legal</fullName>
            </value>
            <value>
                <fullName>Technical/Contracts</fullName>
            </value>
            <value>
                <fullName>Technical/Ferry Company</fullName>
            </value>
            <value>
                <fullName>Legal/Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>