force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Duration_Days_N__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days_N__c</fullName>
    <inlineHelpText>Estimated Duration to complete the task</inlineHelpText>
    <label>Duration(Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>