force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Finish_Date__c</fullName>
    <formula>Start_Date_N__c +  Duration_Days_N__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Finish date</inlineHelpText>
    <label>Est Finish Date</label>
    <type>Date</type>
</CustomField>