force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/leaseworks__Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assigned_Role__c</fullName>
    <label>Assigned Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Role</valueSetName>
    </valueSet>
</CustomField>