force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/leaseworks__Comments__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>