force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/leaseworks__External_Item_URL__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__External_Item_URL__c</fullName>
    <label>External Item URL</label>
    <type>Url</type>
</CustomField>