force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/leaseworks__Lease_Section_Reference__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Section_Reference__c</fullName>
    <label>Lease Section Reference</label>
    <type>TextArea</type>
</CustomField>