force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/leaseworks__Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Project_Phase__c</fullName>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre</fullName>
            </value>
            <value>
                <fullName>At</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>