force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/leaseworks__Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Responsible_Party__c</fullName>
    <label>Responsible Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lessee</fullName>
            </value>
            <value>
                <fullName>Lessor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>