force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/leaseworks__Reviewed__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reviewed__c</fullName>
    <label>Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>