force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/leaseworks__Technical_Project__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Technical_Project__c</fullName>
    <label>Technical Project</label>
    <referenceTo>leaseworks__Technical_Project__c</referenceTo>
    <relationshipLabel>Technical Project Checklist</relationshipLabel>
    <relationshipName>Technical_Project_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>