force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Predecessors__c.field-meta.xml
<CustomField>
    <fullName>Predecessors__c</fullName>
    <description>everything in the checklist is scheduled backwards from the lease expiry date</description>
    <inlineHelpText>Backword days calculation from Lease Expiry Date</inlineHelpText>
    <label>Predecessors(Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>