force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Start_Date_N__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_N__c</fullName>
    <description>Checklist Start Date</description>
    <formula>IF( leaseworks__Technical_Project__r.leaseworks__Lease_Status__c = &#39;On Lease&#39;, leaseworks__Technical_Project__r.leaseworks__Lease_End_Date__c -  Day_Prior__c,  leaseworks__Technical_Project__r.Estimated_Redelivery_Date_N__c - Day_Prior__c)</formula>
    <label>Est Start Date</label>
    <type>Date</type>
</CustomField>