force-app/main/default/objects/leaseworks__Technical_Project_Check__c/fields/Task_Link__c.field-meta.xml
<CustomField>
    <fullName>Task_Link__c</fullName>
    <formula>IF( ISBLANK(Task_Record_Id__c),&quot;The task has not been created yet&quot;,  HYPERLINK(&quot;/&quot;&amp;Task_Record_Id__c ,  Name ))</formula>
    <label>_Task Link</label>
    <type>Text</type>
</CustomField>