force-app/main/default/objects/leaseworks__Technical_Project_Check__c/recordTypes/FPM_Checklist_Item.recordType-meta.xml
<RecordType>
    <fullName>FPM_Checklist_Item</fullName>
    <active>true</active>
    <label>FPM Checklist Item</label>
</RecordType>