force-app/main/default/objects/leaseworks__Technical_Project_Check__c/recordTypes/RP_Checklist_Item.recordType-meta.xml
<RecordType>
    <fullName>RP_Checklist_Item</fullName>
    <active>true</active>
    <label>RP Checklist Item</label>
</RecordType>